# farm

./: .gitignore  CHANGELOG.md  README.md  database_schema.json  pyproject.toml
.github/workflows/: backup.yml  father-assignment.yml
backend_py/: README.md  animal_type_migration.sql  animal_types_migration.sql  app.py  config.py  daily_father_assignment.py  db.py  db_postgres.py  inseminations_migration.sql  main.py  models.py  registrations_insemination_migration.sql  requirements.txt  round_id_helpers.py
backend_py/backup/: backup_gcs.py
backend_py/data/: farm.db
backend_py/events/: __init__.py  event_types.py
backend_py/routes/: admin.py  animal_types.py  auth.py  chatbot.py  companies.py  events.py  father_assignment.py  health.py  inseminations.py  inseminations_ids.py  registrations.py  snapshots.py  user_context.py  users.py
backend_py/services/: admin.py  animal_types.py  auth_service.py  companies.py  event_emitter.py  event_emitter_postgres.py  events.py  father_assignment.py  father_assignment_background.py  firebase_auth.py  inseminations.py  inseminations_ids.py  inseminations_multi_tenant.py  inseminations_upload.py  registration_projector.py  registration_projector_postgres.py  registrations.py  registrations_multi_tenant.py  registrations_upload.py  snapshot_projector.py  users.py  (+1 more)
chatbot/: README.md  __init__.py  config.py  graph.py  nodes.py
frontend/: README.md  app.js  config.js  db.js  index.html  manifest.json  service-worker.js  styles.css
react-redesign/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+32 files in other folders)
